--- a/src/server/env.example
+++ b/src/server/env.example
@@ -9,6 +9,15 @@ DB_PORT=3306
 JWT_SECRET=your-super-secret-jwt-key-here
 JWT_EXPIRES_IN=24h
 
+# Session Configuration
+SESSION_SECRET=your-super-secret-session-key-here
+SESSION_EXPIRES_IN=86400000
+
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=your-redis-password-here
+
 # Server Configuration
 PORT=3001
 NODE_ENV=development
