--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pocket-credit-backend",
   "version": "1.0.0",
-  "description": "Backend API for Pocket Credit lending platform",
+  "description": "Backend API for Pocket Credit lending platform with mobile OTP authentication",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -14,11 +14,15 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "connect-redis": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.11.2",
+    "express-session": "^1.17.3",
     "helmet": "^7.2.0",
+    "ioredis": "^5.3.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
@@ -26,6 +30,7 @@
     "mysql2": "^3.14.5",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
+    "otp-generator": "^4.0.1",
     "twilio": "^4.14.0",
     "uuid": "^9.0.0"
   },
@@ -37,7 +42,10 @@
     "fintech",
     "loans",
     "api",
-    "nodejs"
+    "nodejs",
+    "otp",
+    "authentication",
+    "mobile"
   ],
   "author": "Pocket Credit",
   "license": "MIT"
